# Mini_Project

./: .gitignore  main.py  mc.py  mini_preprocess.py  ml_pipeline_v10.csv  ml_pipeline_v10.py  ml_pipeline_v6.py  ml_pipeline_v9.py  patch.py  preprocess.py  preprocess_stockwell.py  preprocess_stockwell2.py  preprocess_stockwell_vectorized_v2.py  preprocess_stockwell_vectorized_v8.py  pyproject.toml  run_during_sleep.sh  view_results.ipynb
failed_or_test_pipelines/: HONEST_CV_SUMMARY.md  MATHEMATICAL_CORRECTIONS_FINAL.md  PREPROCESSING_CORRECTIONS_FINAL.md  PREPROCESSING_FIXES_APPLIED.md  SUCCESS_80_PERCENT_ACHIEVEMENT.md  add_rasm.py  leaky_vs_honest_comparison.csv  leaky_vs_honest_comparison.py  mini_ml.py  mini_ml_fixed.py  mini_ml_fixed_v2.py  mini_ml_pipeline.py  mini_ml_simple.py  mini_preprocess_bandpower.py  mini_preprocess_stockwell.py  ml_fixed_cross_session.py  ml_honest_groupkfold.py  ml_honest_groupkfold_memory_efficient.py  ml_pipeline_v10.py  ml_pipeline_v3.py  ml_pipeline_v9.py  optimized_pipeline_80_percent.py  preprocess.py  preprocess_stockwell_vectorized_v1.py  preprocess_stockwell_vectorized_v2.py  preprocess_vectorized_DE_RASM_v1.py  results_within_session.csv  simple_consistent_pipeline.py  simple_consistent_results.csv  stable_consistent_pipeline.py  test_differential_entropy.py  test_imports.py  test_preprocessing_math.py  test_stransform_versions.py
logs/: results_cv_v3.csv
