[project]
name = "eegproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "mne>=1.11.0",
    "neo==0.10.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=23.0.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.5.2",
    "pywavelets>=1.8.0",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
    "lightgbm>=4.6.0",
    "mne-connectivity>=0.8",
]
